<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundo"
    tools:context=".ColetaDadosActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <!-- Campo Peso -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:padding="8dp"
        app:boxStrokeColor="@color/textoPrincipal"
        app:endIconMode="clear_text"
        app:helperTextTextColor="@color/textoPrincipal"
        app:hintTextColor="@color/textoPrincipal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPeso"
            style="@style/EditTextCursorColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edtDigiteSeuPeso"
            android:inputType="numberDecimal"
            android:maxLength="5"
            android:textColor="@color/textoPrincipal"
            android:textColorHint="@color/textoPrincipal" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Campo Altura -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:padding="8dp"
        app:boxStrokeColor="@color/textoPrincipal"
        app:endIconMode="clear_text"
        app:helperTextTextColor="@color/textoPrincipal"
        app:hintTextColor="@color/textoPrincipal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtAltura"
            style="@style/EditTextCursorColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edtDigiteSuaAltura"
            android:inputType="numberDecimal"
            android:maxLength="3"
            android:textColor="@color/textoPrincipal"
            android:textColorHint="@color/textoPrincipal" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Instrução -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtInstrucao"
        android:textColor="@color/textoPrincipal"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <!-- Botão Calcular -->
    <Button
        android:id="@+id/btnCalcularImc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:backgroundTint="@color/primaria_variacao"
        android:text="@string/btnCalcularIMC"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <!-- Loader -->
    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:indicatorColor="@color/loading"
        app:indicatorSize="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcularImc"
        app:trackThickness="4dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
